# nesferratu

./: .gitignore  Cargo.toml  README.md
nesferratu-core/: Cargo.toml
nesferratu-core/src/: cartridge.rs  cpu.rs  debugger.rs  lib.rs  main.rs
nesferratu-core/src/cartridge/: mappers.rs
nesferratu-core/src/cpu/: instructions.rs
nesferratu-core/src/cpu/instructions/: addressing.rs  ops.rs
stuff/: addressing.tsv  addrfunstumps.txt  bytelength.tsv  cyclelength.tsv  funstumps.txt  opcodes.tsv  opmatch.txt  stuff.py  weird_instructions.txt
