[package]
name = "nesferratu-core"
version = "0.1.0"
authors = ["SpitfireX <timm.weber@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
clap = "2.33.3"
rustyline = "8.0.0"
regex = "1.4.5"